<resources>
    <string name="app_name">URL TV Admin</string>

    <string name="back_button">Back</string>
    <string name="add_url">Add URL</string>
    <string name="title">Title</string>
    <string name="url">URL</string>
    <string name="user_agent">User Agent</string>
    <string name="optional">Optional</string>
    <string name="save">SAVE</string>
    <string name="logo">https://logo.png/</string>


    <!-- Error Messages -->
    <string name="error_invalid_user_agent">User agent is too short or invalid</string>
    <string name="error_title_required">Title is required</string>
    <string name="error_title_too_short">Title must be at least 3 characters</string>
    <string name="error_title_exists">A channel with this title already exists</string>
    <string name="error_url_required">URL is required</string>
    <string name="error_invalid_url">Please enter a valid streaming URL (HLS, MP4, AVI, MKV, RTMP, RTSP, etc.)</string>
    <string name="error_saving_channel">Error saving channel</string>
    <string name="error_loading_channels">Error loading channels</string>
    <string name="error_invalid_position">Invalid channel position</string>
    <string name="error_channel_not_found">Channel not found</string>
    <string name="error_updating_list">Error updating channel list</string>
    <string name="error_removing_channel">Error removing channel</string>
    <string name="error_adding_channel">Error adding channel</string>
    <string name="error_updating_channel">Error updating channel</string>
    <string name="error_deleting_channel">Error deleting channel</string>
    <string name="error_playback">Error playing video</string>

    <!-- Success Messages -->
    <string name="success_channel_saved">Channel saved successfully</string>
    <string name="success_channel_updated">Channel updated successfully</string>
    <string name="success_channel_deleted">Channel deleted successfully</string>
    <string name="success_channel_removed">Channel removed successfully</string>
    <string name="success_channel_added">Channel added successfully</string>
    <string name="success_list_updated">Channel list updated</string>

    <!-- URL Types -->
    <string name="url_type_hls">HLS Stream</string>
    <string name="url_type_rtmp">RTMP Stream</string>
    <string name="url_type_rtsp">RTSP Stream</string>
    <string name="url_type_http">HTTP Stream</string>
    <string name="url_type_mp4">MP4 Video</string>
    <string name="url_type_udp">UDP Stream</string>
    <string name="url_type_rtp">RTP Stream</string>
    <string name="url_type_mms">MMS Stream</string>
    <string name="url_type_ts">Transport Stream</string>
    <string name="url_type_srt">SRT Stream</string>

    <!-- Update Activity -->
    <string name="update_channel">Update Channel</string>
    <string name="delete_channel">Delete Channel</string>
    <string name="delete_channel_confirmation">Are you sure you want to delete this channel?</string>


    <!-- Empty State -->
    <string name="empty_channels_message">No channels added yet.\nTap + to add your first channel.</string>

    <!-- New string for empty state icon -->
    <string name="empty_state_icon">Empty state icon</string>


    <!-- App Info -->
    <string name="app_description">Watch Online Videos</string>

    <!-- Navigation Menu -->
    <string name="rate_app">Rate App</string>
    <string name="share_app">Share App</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="contact_us">Contact Us</string>
    <string name="share_message">Share via</string>
    <string name="email_subject">URL Player Beta Feedback</string>
    <string name="error_privacy_policy">Unable to open privacy policy</string>
    <string name="error_no_email">No email app found</string>

    <string name="duration">00:00</string>
    <string name="image">Image</string>
    <string name="loading">Loading...</string>
    <string name="video_name">URL Player Beta</string>
    <string name="folder_name">Folder Name</string>
    <string name="semi_colon">/</string>
    <string name="lock">Lock Button</string>
    <string name="back_btn">Back</string>
    <string name="menu">Menu</string>
    <string name="prev_btn">Previous</string>
    <string name="next_btn">Next</string>
    <string name="repeat_btn">Repeat</string>
    <string name="fullscreen_btn">Fullscreen</string>
    <string name="play_btn">Play</string>

    <!--    for menu-->
    <string name="audio_track">Audio Track</string>
    <string name="subtitles">Subtitles</string>
    <string name="booster">Booster</string>
    <string name="speed">1.0x</string>
    <string name="sleep_timer">Sleep Timer</string>
    <string name="pip_mode">PiP Mode</string>
    <string name="search">Search</string>

    <!--strings for video more features-->
    <string name="rename">Rename </string>
    <string name="info">Info</string>
    <string name="share">Share</string>
    <string name="orientation">Orientation</string>
    <string name="O">0</string>
    <string name="apply_to_all">Apply to all videos</string>
    <string name="video_quality">Video Quality</string>

    <string name="select_quality">Select Quality</string>
    <string name="auto_quality_enabled">Auto quality enabled</string>
    <string name="quality_changed">Quality changed to %1$s</string>
    <string name="quality_change_failed">Failed to change quality: %1$s</string>

    <!-- Main Activity -->
    <string name="main_content">Main content</string>
    <string name="drawer_content">Navigation drawer content</string>
    <string name="tv_icon">TV icon</string>
    <string name="online_videos">ONLINE VIDEOS</string>



    <!-- AdMob Ad Unit IDs -->
    <string name="admob_interstitial_id">ca-app-pub-3940256099942544/1033173712</string>
    <string name="admob_banner_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="admob_rewarded_interstitial_id">ca-app-pub-3940256099942544/5354046379</string>

    <!-- For testing, you can use these test IDs -->
    <!--    <string name="admob_interstitial_id">ca-app-pub-3940256099942544/1033173712</string>-->
    <!--    <string name="admob_banner_id">ca-app-pub-3940256099942544/6300978111</string>-->
    <!--    <string name="admob_rewarded_interstitial_id">ca-app-pub-3940256099942544/5354046379</string>-->

    <string name="app_logo">App Logo</string>
    <string name="version">Version %s</string>
    <string name="version_format">Version %s</string>
    <string name="developed_by">Developed by</string>
    <string name="developer_name">Samyak2403\nhttps://github.com/samyak2403</string>

    <string name="about">About</string>

    <string name="edit_channel">Edit Channel</string>
    <string name="channel_name">Channel Name</string>
    <string name="channel_link">Channel Link</string>
    <string name="logo_url">Logo URL</string>
    <string name="channel_name_required">Channel name is required</string>
    <string name="channel_link_required">Please enter a valid URL</string>

    <string name="add_channel">Add Channel</string>
    <string name="channel_added_successfully">Channel added successfully</string>
    <string name="failed_to_add_channel">Failed to add channel</string>

    <string name="category">Category</string>

    <string name="search_channels">Search channels</string>

    <!-- Channel Item Strings -->
    <string name="channel_logo">Channel Logo</string>
    <string name="edit_channel_button">Edit Channel</string>
    <string name="delete_channel_button">Delete Channel</string>
    <string name="uncategorized">Uncategorized</string>

    <!-- Add these string resources to your strings.xml file -->
    <string name="manage_categories">Manage Categories</string>
    <string name="category_name">Category Name</string>
    <string name="add_category">Add Category</string>
    <string name="existing_categories">Existing Categories</string>
    <string name="edit_category">Edit Category</string>
    <string name="cancel">Cancel</string>
    <string name="update">Update</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="category_name_required">Category name is required</string>
    <string name="category_added_successfully">Category added successfully</string>
    <string name="failed_to_add_category">Failed to add category</string>
    <string name="category_updated_successfully">Category updated successfully</string>
    <string name="failed_to_update_category">Failed to update category</string>
    <string name="category_deleted_successfully">Category deleted successfully</string>
    <string name="failed_to_delete_category">Failed to delete category</string>
    <string name="failed_to_load_categories">Failed to load categories</string>

    <!-- Add this to your strings.xml file -->
    <string name="no_categories_yet">No categories added yet. Add your first category above.</string>

    <!-- Add these string resources to your strings.xml file -->
    <string name="add_new_category">Add New Category</string>
    <string name="category_icon">Category icon</string>

    <!-- Add these string resources to your strings.xml file -->
    <string name="delete_category">Delete Category</string>
    <string name="delete_category_confirmation">Are you sure you want to delete the category \"%1$s\"?</string>

</resources>